--- a/page.html
+++ b/page.html
@@ -7,6 +7,7 @@
     <body>
         <div id = "container"></div>
         <button type = "button" id = "gridButton">New Grid</button>
+        <button type = "button" id = "gridClearButton">Clear Grid</button>
     </body>
     <script type="text/javascript" src="jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/JS.js"></script>
