--- a/page.html
+++ b/page.html
@@ -8,6 +8,8 @@
         <div id = "container"></div>
         <button type = "button" id = "gridButton">New Grid</button>
         <button type = "button" id = "gridClearButton">Clear Grid</button>
+        <button type = "button" id = "RGBButton">RGB Brush</button>
+        <button type = "button" id = "gradientButton">Gradient Brush</button>
     </body>
     <script type="text/javascript" src="jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/JS.js"></script>
